# pymlx90640

./: README.md  setup.cfg
examples/: capture.py  capture2.py  simplecam01.py  simplecam02.py
examples/simplecam02_cap/: makemp4.sh
src/: mlx90640.py
