[metadata]
name = pymlx90640-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = MLX90640 FIR sensor access library for Python
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pymlx90640
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	pylabdevs-tspspi >= 0.0.17
	numpy >= 1.25.0

[options.packages.find]
where = src

[options.entry_points]
